[gd_scene load_steps=2 format=3 uid="uid://curmk3afyhdvy"]

[ext_resource type="Script" path="res://scenes/ui/ability_upgrade_card.gd" id="1_4t4qu"]

[node name="AbilityUpgradeCard" type="PanelContainer"]
custom_minimum_size = Vector2(120, 150)
script = ExtResource("1_4t4qu")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="UpgradeNameLabel" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Test Name"
horizontal_alignment = 1
vertical_alignment = 1

[node name="UpgradeDescriptionLabel" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Some example description of an upgrade"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3
